--- a/src/styles/modules/variables.scss
+++ b/src/styles/modules/variables.scss
@@ -1,7 +1,8 @@
 // fonts
-$main-font: 'Telegraf', sans-serif;
+$main-font: 'Roboto', sans-serif;
 $second-font: 'Times new roman', serif;
 
 // colors
 $main-color: #3384e4;
 $gray-color: #fdfbfd;
+$dim-color: #b9bbbd;
