--- a/src/styles/blocks/file-info.scss
+++ b/src/styles/blocks/file-info.scss
@@ -2,16 +2,19 @@
 
 .file-info {
   &__title {
-    font-size: 1.2rem;
-    font-weight: 500;
-    margin-bottom: .3rem;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 0;
   }
 
   &__details {
     display: flex;
     gap: 1rem;
-    opacity: .6;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    span {
+      font-family: $second-font;
+      color: $dim-color;
+    }
     span:first-of-type {
       position: relative;
       &::after {
