--- a/src/styles/blocks/modal.scss
+++ b/src/styles/blocks/modal.scss
@@ -6,44 +6,215 @@
   top: 50%;
   transform: translateY(-50%);
   padding: 1.5rem 2rem;
-  width: 25rem;
-  height: 34rem;
+  width: 20rem;
+  height: 30rem;
   background-color: $gray-color;
   box-shadow: 0 0 12px 0 rgba(black, 0.1);
   border-radius: 10px;
 
-  &_share {
-    display: flex;
+  &-choosing-files {
+    width: 100%;
+    height: 100%;
+    display: none; // todo flex
     flex-direction: column;
     justify-content: space-between;
-  }
 
-  &__wrapper-low-elems {
+    &__file-info {
+      position: relative;
+      padding: 0 0.5rem;
+      &:hover {
+        .modal-choosing-files__remove-file {
+          display: block;
+        }
+      }
+    }
 
-  }
+    &__share-form {
+      input {
+        display: block;
+        width: 1px;
+        height: 1px;
+        opacity: 0;
+        overflow: hidden;
 
-  &__share-form {
-    input {
-      display: block;
-      width: 1px;
-      height: 1px;
-      opacity: 0;
-      overflow: hidden;
+        &:focus + *, &:focus-visible + * {
+          circle {
+            fill: rgb($main-color, 20%);
+          }
+        }
+      }
+    }
 
-      &:focus + *, &:focus-visible + * {
+    &__file-list {
+      height: 100%;
+      overflow-y: auto;
+      overflow-x: hidden;
+      li {
+        list-style-type: none;
+        position: relative;
+
+        &:not(:last-of-type) {
+          margin-bottom: 1rem;
+        }
+        &::after {
+          position: absolute;
+          bottom: -.5rem;
+          content: "";
+          display: block;
+          background: #bdbdbd;
+          height: 1px;
+          width: 100%;
+          border-radius: 1rem;
+        }
+      }
+    }
+    &__remove-file {
+      display: none;
+      height: 100%;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: .125s all;
+      button {
+        width: 3rem;
+        height: 100%;
+        background: linear-gradient(to right, transparent 20%, $gray-color);
+        border: none;
+        padding-right:.5rem;
+        padding-left: 1.2rem;
+      }
+      svg {
+        display: block;
+        width: 0.75rem;
+        height: 0.75rem;
+        fill: $main-color;
+        path {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+
+    &__add-files {
+      height: max-content;
+      margin-top: auto;
+    }
+
+    &__add-files-custom-bottom {
+      width: 100%;
+      height: max-content;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: .5rem;
+      cursor: pointer;
+      margin-bottom: 1.5rem;
+      &:hover {
         circle {
           fill: rgb($main-color, 20%);
         }
       }
     }
+    &__add-files-image {
+      width: 2rem;
+      height: 2rem;
+      fill: $main-color;
+      circle {
+        transition: .125s all;
+        fill: transparent;
+      }
+    }
+    &__add-files-description {
+      height: 2.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: .25rem;
+    }
+    &__add-files-title {
+      font-size: 1rem;
+      font-weight: 400;
+    }
+    &__add-files-info {
+      display: flex;
+      gap: 0.5rem;
+      opacity: .6;
+      span {
+        font-size: 0.8rem;
+        &:first-of-type {
+          position: relative;
+          &::after {
+            position: absolute;
+            right: -0.25rem;
+            top: 0.5rem;
+            content: "";
+            display: block;
+            height: 2px;
+            width: 2px;
+            background-color: black;
+            border-radius: 50%;
+          }
+        }
+      }
+    }
+  }
+  &-transferring {
+    width: 100%;
+    height: 100%;
+    display: flex; // todo none
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    &__all-data {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+    }
+    &__upload-status {
+      width: 80%;
+      height: 80%;
+      display: block;
+      margin: 0 auto;
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &__title {
+      font-size: 1.5rem;
+    }
+    &__info {
+      text-align: center
+    }
+    &__count-files {
+      text-align: center;
+      margin-bottom: .2rem;
+    }
+    &__size-info {
+      color: $dim-color;
+    }
+
   }
 
-  &__uploader-list {
+
+  &__wrapper-up-elems {
+    height: 17.5rem;
     position: relative;
-    height: max-content;
-    &::after {
+    &-gradient {
       position: absolute;
-      bottom: -1rem;
+      z-index: 10;
+      bottom: 0;
+      width: 100%;
+      height: 1rem;
+      background: linear-gradient(to top, $gray-color 40%, transparent);
+    }
+  }
+  &__wrapper-low-elems {
+    position: relative;
+    &::before {
+      position: absolute;
+      top: -1rem;
       opacity: .8;
       content: "";
       display: block;
@@ -51,109 +222,6 @@
       height: 2px;
       width: 100%;
       border-radius: 1rem;
-    }
-  }
-  &__file-list {
-    height: 20rem;
-    overflow-y: auto;
-    overflow-x: hidden;
-
-    li {
-      list-style-type: none;
-      position: relative;
-
-      &:not(:last-of-type) {
-        margin-bottom: 1rem;
-      }
-      &::after {
-        position: absolute;
-        bottom: -.5rem;
-        content: "";
-        display: block;
-        background: #bdbdbd;
-        height: 1px;
-        width: 100%;
-        border-radius: 1rem;
-      }
-    }
-  }
-  &__add-files {
-    height: max-content;
-    margin-top: auto;
-  }
-
-  &__add-files-custom-bottom {
-    width: 100%;
-    height: max-content;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: .5rem;
-    cursor: pointer;
-    margin-bottom: 1.5rem;
-    &:hover {
-      circle {
-        fill: rgb($main-color, 20%);
-      }
-    }
-  }
-  &__add-files-image {
-    width: 2.5rem;
-    height: 2.5rem;
-    fill: $main-color;
-    circle {
-      transition: .125s all;
-      fill: transparent;
-    }
-  }
-  &__add-files-description {
-    display: flex;
-    flex-direction: column;
-    gap: .25rem;
-  }
-  &__add-files-title {
-    font-size: 1.2rem;
-    font-weight: 400;
-  }
-  &__add-files-info {
-    display: flex;
-    gap: 1rem;
-    opacity: .6;
-    span {
-      font-size: 1rem;
-      line-height: 1rem;
-      &:first-of-type {
-        position: relative;
-        &::after {
-          position: absolute;
-          right: -0.5rem;
-          top: 0.5rem;
-          content: "";
-          display: block;
-          height: 2px;
-          width: 2px;
-          background-color: black;
-          border-radius: 50%;
-        }
-      }
-    }
-  }
-  &__get-link-btn {
-    display: block;
-    margin: 0 auto;
-    color: $gray-color;
-    line-height: 1.5rem;
-    font-size: 1.5rem;
-    font-weight: 500;
-    background-color: $main-color;
-    border: solid 2px $main-color;
-    border-radius: 1.5rem;
-    width: 15rem;
-    height: 3rem;
-    &:hover, &:focus, &:focus-visible {
-      background-color: $gray-color;
-      outline: none;
-      color: $main-color;
     }
   }
 }
