--- a/src/styles/modules/fonts.scss
+++ b/src/styles/modules/fonts.scss
@@ -1,6 +1,25 @@
 @font-face {
-  font-family: "Telegraf";
-  src: url("../fonts/Telegraf Regular 400.otf") format('opentype');
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Medium.ttf") format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.ttf") format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Medium.ttf") format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
   font-weight: 400;
   font-style: normal;
 }
