--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,3 +41,4 @@ body {
 @import "./blocks/button";
 @import "./blocks/file-info";
 @import "./blocks/circle-indicator";
+@import "./blocks/separator";
