--- a/src/styles/blocks/modal.scss
+++ b/src/styles/blocks/modal.scss
@@ -15,10 +15,18 @@
   &-choosing-files {
     width: 100%;
     height: 100%;
-    display: none; // todo flex
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 
+    &__plug {
+      display: none;
+      color: $dim-color;
+      font-size: 1.5rem;
+      &.active {
+        display: block;
+      }
+    }
     &__file-info {
       position: relative;
       padding: 0 0.5rem;
@@ -76,14 +84,11 @@
       top: 50%;
       transform: translateY(-50%);
       transition: .125s all;
-      button {
-        width: 3rem;
-        height: 100%;
-        background: linear-gradient(to right, transparent 20%, $gray-color);
-        border: none;
-        padding-right:.5rem;
-        padding-left: 1.2rem;
-      }
+      width: 4rem;
+      background: linear-gradient(to right, transparent 20%, #fdfbfd 50%);
+      border: none;
+      padding-right:.5rem;
+      padding-left: 2.2rem;
       svg {
         display: block;
         width: 0.75rem;
@@ -96,12 +101,11 @@
       }
     }
 
-    &__add-files {
-      height: max-content;
-      margin-top: auto;
+    &__share-form {
     }
 
     &__add-files-custom-bottom {
+      margin-bottom: 1.5rem;
       width: 100%;
       height: max-content;
       display: flex;
@@ -109,7 +113,6 @@
       align-items: center;
       gap: .5rem;
       cursor: pointer;
-      margin-bottom: 1.5rem;
       &:hover {
         circle {
           fill: rgb($main-color, 20%);
@@ -137,31 +140,17 @@
     }
     &__add-files-info {
       display: flex;
-      gap: 0.5rem;
+      gap: 0.3rem;
       opacity: .6;
-      span {
+      div {
         font-size: 0.8rem;
-        &:first-of-type {
-          position: relative;
-          &::after {
-            position: absolute;
-            right: -0.25rem;
-            top: 0.5rem;
-            content: "";
-            display: block;
-            height: 2px;
-            width: 2px;
-            background-color: black;
-            border-radius: 50%;
-          }
-        }
       }
     }
   }
   &-transferring {
     width: 100%;
     height: 100%;
-    display: flex; // todo none
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
@@ -196,7 +185,46 @@
     }
 
   }
+  &-transferred {
+    width: 100%;
+    height: 100%;
+    display: none; // todo none
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 2rem;
+    text-align: center;
 
+    &__success-icon {
+      width: 100%;
+      height: 7rem;
+      margin-bottom: 1rem;
+      svg {
+        width: 100%;
+        height: 100%;
+        path {
+          fill: none;
+          stroke: #33e45c;
+          animation: 2s success-svg-stroke ease-in-out forwards, .6s success-svg-fill 1.5s ease forwards;
+          stroke-dashoffset: 500px;
+          stroke-dasharray: 500px;
+          stroke-linecap: round;
+        }
+      }
+    }
+    &__success-title {
+      font-size: 2.5rem;
+      font-weight: 400;
+      margin-bottom: 1rem;
+    }
+    &__success-description {
+      button {
+        color: #3384e4;
+        text-decoration: underline;
+        border: none;
+        background: transparent;
+      }
+    }
+  }
 
   &__wrapper-up-elems {
     height: 17.5rem;
@@ -210,7 +238,7 @@
       background: linear-gradient(to top, $gray-color 40%, transparent);
     }
   }
-  &__wrapper-low-elems {
+  &__wrapper-down-elems {
     position: relative;
     &::before {
       position: absolute;
@@ -223,5 +251,23 @@
       width: 100%;
       border-radius: 1rem;
     }
+  }
+}
+
+@keyframes success-svg-stroke {
+  0% {
+    stroke-dasharray: 160px;
+    stroke-dashoffset: 160px;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes success-svg-fill {
+  0% {
+    fill: transparent;
+  }
+  100% {
+    fill: #33e45c;
   }
 }
