--- a/src/views/sharing.hbs
+++ b/src/views/sharing.hbs
@@ -94,7 +94,7 @@
     <div class="modal__wrapper-up-elems">
       <div class="modal-transferred__success-icon">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-             width="44.648px" height="44.647px" viewBox="0 0 44.648 44.647">
+             width="44.648px" height="44.647px" viewBox="0 0 44.648 45.5">
           <path d="M39.829,0H4.819C2.518,0,0.654,1.838,0.654,4.14v25.511c0,1.438,0.742,2.776,1.963,3.537l17.39,10.829
             c1.342,0.836,3.04,0.841,4.387,0.013l17.619-10.845c1.23-0.758,1.98-2.101,1.98-3.547V4.14C43.994,1.839,42.13,0,39.829,0z
              M33.196,17.583l-11.691,11.69c-1.033,1.033-2.708,1.033-3.74,0l-5.794-5.794c-0.497-0.496-0.775-1.169-0.775-1.87
@@ -108,6 +108,10 @@
       <p class="modal-transferred__success-description">Copy your download link or
         <button class="modal-transferred__what-is-inside">see what's inside</button>
       </p>
+
+      <label>
+        <input type="text" class="modal-transferred__link" readonly value="">
+      </label>
     </div>
     <div class="modal__wrapper-down-elems">
       <button class="modal-transferred__copy-link button">Copy link</button>
