--- a/src/styles/modules/variables.scss
+++ b/src/styles/modules/variables.scss
@@ -4,5 +4,8 @@ $second-font: 'Times new roman', serif;
 
 // colors
 $main-color: #3384e4;
+$darker-main-color: #006ced;
 $gray-color: #fdfbfd;
+$deaf-color: #f7f9fa;
 $dim-color: #b9bbbd;
+$muffled-color: #646364;
