--- a/src/views/sharing.hbs
+++ b/src/views/sharing.hbs
@@ -11,7 +11,7 @@
       <div class="modal__wrapper-up-elems-gradient"></div>
     </div>
 
-    <div class="modal__wrapper-down-elems">
+    <div class="separator-line">
       <form class="modal-choosing-files__share-form">
         <input name="files" type="file" multiple>
 
@@ -85,7 +85,7 @@
         </div>
       </div>
     </div>
-    <div class="modal__wrapper-down-elems">
+    <div class="separator-line">
       <button class="modal-transferring__cancel-btn button">Cancel</button>
     </div>
   </div>
@@ -113,7 +113,7 @@
         <input type="text" class="modal-transferred__link" readonly value="">
       </label>
     </div>
-    <div class="modal__wrapper-down-elems">
+    <div class="separator-line">
       <button class="modal-transferred__copy-link button">Copy link</button>
     </div>
   </div>
