--- a/src/styles/blocks/file-info.scss
+++ b/src/styles/blocks/file-info.scss
@@ -1,6 +1,8 @@
 @import "../modules/variables";
 
 .file-info {
+  width: 100%;
+  height: 100%;
   &__title {
     font-size: 1rem;
     font-weight: 400;
