--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,3 +44,4 @@ body {
 @import "./blocks/circle-indicator";
 @import "./blocks/separator";
 @import "./blocks/file-element";
+@import "./blocks/error-page";
