--- a/src/views/getting.hbs
+++ b/src/views/getting.hbs
@@ -19,24 +19,24 @@
       <button class="modal-getting__check-transfer-files-btn separator-line separator-line_gray-line">
         <div class="modal-getting__mini-files-info-wrapper">
           <div class="modal-getting__amount-files-info">
-            <span class="modal-getting__amount-files">3</span> files
+            <span class="modal-getting__amount-files">{{files.length}}</span> files
           </div>
           <div class="modal-getting__size-files-wrapper">
-            <span class="modal-getting__size-files">3 MB</span>
+            <span class="modal-getting__size-files">{{totalSize.amount}} {{totalSize.units}}</span>
           </div>
         </div>
         <span class="modal-getting__check-preview-text">Preview</span>
       </button>
     </div>
     <div class="separator-line">
-      <button class="modal-getting__download-btn button">Download</button>
+      <button class="modal-getting__download-all-btn button">Download</button>
     </div>
   </div>
 </div>
 
 <div class="modal modal_right-full-height">
   <header class="modal__header separator-line separator-line_gray-line separator-line_bottom">
-    <button class="modal__close-btn">
+    <button title="close this modal window" class="modal__close-btn">
       <svg
         width="32px"
         height="32px"
@@ -62,7 +62,7 @@
       <div class="modal-getting__left-header">
         <div class="modal-getting__title">Items in this transfer</div>
         <div class="modal-getting__mini-transfer-info">
-          <span class="modal-getting__amount-files">3</span> files, <span class="modal-getting__size-files">3 MB</span>・Transfer
+          <span class="modal-getting__amount-files">{{files.length}}</span> files, <span class="modal-getting__size-files">{{totalSize.amount}} {{totalSize.units}}</span>・Transfer
           expires in <span class="modal-getting__expiration-time">7</span> days
         </div>
       </div>
@@ -73,51 +73,23 @@
 
     <div class="modal-getting__wrapper-file-list">
       <ul class="modal-getting__file-list">
-        <li class="modal-getting__file-element file-element">
-          <div class="file-element__description-file">
-            <div class="file-element__title">Montserrat.zip</div>
-            <div class="file-element__size">1.8 MB</div>
-          </div>
-          <button class="file-element__download-one-file-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 24 24">
-              <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12s4.477 10 10 10 10-4.477 10-10zm-9 1.492V7.998C13 7.446 12.552 7
+        {{#each files}}
+          <li class="modal-getting__file-element file-element">
+            <div class="file-element__description-file">
+              <div class="file-element__title">{{name}}</div>
+              <div class="file-element__size">{{size.amount}} {{size.units}}</div>
+            </div>
+            <button title="download file {{name}}" data-file-name="{{name}}" class="file-element__download-one-file-btn">
+              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 24 24">
+                <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12s4.477 10 10 10 10-4.477 10-10zm-9 1.492V7.998C13 7.446 12.552 7
               12 7c-.556 0-1 .447-1 .998v5.48l-2.53-2.53c-.385-.385-1.022-.39-1.413.002-.393.393-.39 1.022-.002
               1.412l4.247
               4.247c.192.19.447.288.702.288.26.003.514-.095.708-.29l4.247-4.246c.383-.385.387-1.022-.003-1.412-.394-.393-1.023-.392-1.413-.002L13
               13.492zM0 12C0 5.373 5.373 0 12 0s12 5.373 12 12-5.373 12-12 12S0 18.627 0 12z"></path>
-            </svg>
-          </button>
-        </li>
-        <li class="modal-getting__file-element file-element">
-          <div class="file-element__description-file">
-            <div class="file-element__title">Roboto.zip</div>
-            <div class="file-element__size">3 MB</div>
-          </div>
-          <button class="file-element__download-one-file-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 24 24">
-              <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12s4.477 10 10 10 10-4.477 10-10zm-9 1.492V7.998C13 7.446 12.552 7
-              12 7c-.556 0-1 .447-1 .998v5.48l-2.53-2.53c-.385-.385-1.022-.39-1.413.002-.393.393-.39 1.022-.002
-              1.412l4.247
-              4.247c.192.19.447.288.702.288.26.003.514-.095.708-.29l4.247-4.246c.383-.385.387-1.022-.003-1.412-.394-.393-1.023-.392-1.413-.002L13
-              13.492zM0 12C0 5.373 5.373 0 12 0s12 5.373 12 12-5.373 12-12 12S0 18.627 0 12z"></path>
-            </svg>
-          </button>
-        </li>
-        <li class="modal-getting__file-element file-element">
-          <div class="file-element__description-file">
-            <div class="file-element__title">Roboto.zip</div>
-            <div class="file-element__size">3 MB</div>
-          </div>
-          <button class="file-element__download-one-file-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 24 24">
-              <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12s4.477 10 10 10 10-4.477 10-10zm-9 1.492V7.998C13 7.446 12.552 7
-              12 7c-.556 0-1 .447-1 .998v5.48l-2.53-2.53c-.385-.385-1.022-.39-1.413.002-.393.393-.39 1.022-.002
-              1.412l4.247
-              4.247c.192.19.447.288.702.288.26.003.514-.095.708-.29l4.247-4.246c.383-.385.387-1.022-.003-1.412-.394-.393-1.023-.392-1.413-.002L13
-              13.492zM0 12C0 5.373 5.373 0 12 0s12 5.373 12 12-5.373 12-12 12S0 18.627 0 12z"></path>
-            </svg>
-          </button>
-        </li>
+              </svg>
+            </button>
+          </li>
+        {{/each}}
       </ul>
     </div>
   </main>
