--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,3 +45,15 @@ body {
 @import "./blocks/separator";
 @import "./blocks/file-element";
 @import "./blocks/error-page";
+
+@media screen and (max-width: 1100px) {
+    body {
+        padding: 2rem;
+        background: radial-gradient(circle farthest-side at center, #eeecdc 5%, #edbc51 15%, #f27b20 25%, #3367b8 60%, #5321aa 75%, #292530 90%);
+        width: 100vw;
+        min-height: 100vh;
+        max-height: max-content;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+}
